# RAG-app

./: .gitignore  README.md  main.py  packages.txt  pyproject.toml  requirements.txt
components/: styling.py  ui_helpers.py
config/: app_config.py  db_config.py
src/: document_processor.py  qa_chain.py  vector_store.py
